Resolves: tdf#101626 replace soft-hyphen with hard-hyphen as list BulletChar

In MSO there is no difference in representation and export to PDF, LO treats a soft hyphen correctly and removes it while exporting to PDF etc.
Therefore, it is replaced by a hard one (173u -> 45u)

Change-Id: I5d0fe1cca134697739560d52cfd9eaf8a14fffd2